<resources>
    <string name="app_name">Counterfeit Goods Tracker</string>
    <string name="prompt_auth_option_question">Select one of the following options</string>
    <string name="prompt_auth_option_agent">Manufacturer / Distributor / Retail</string>
    <string name="prompt_auth_option_customer">Customer</string>
    <string name="auth_option_agency_welcome">Welcome, agent! Please click the following button to generate new identity</string>
    <string name="auth_option_new_identity">Generate New Identity</string>
    <string name="auth_option_customer_welcome">Welcome, consumer! Proceed to generate your new identity</string>
    <string name="login">Login</string>
    <string name="main_welcome">Welcome to our app. Please proceed to log in</string>
    <string name="new_item">New Item</string>
    <string name="dashboard_welcome_agency">Agency Dashboard</string>
    <string name="search_item">Search Item</string>
    <string name="settings">Settings</string>
    <string name="dashboard_welcome_customer">Welcome, Customer</string>
    <string name="account_type">Account Type:</string>
    <string name="save">Save</string>
    <string name="item_name">Item Name:</string>
    <string name="update_item">Update Item</string>
    <string name="item_id">Item ID:</string>
    <string name="item_history">Item History</string>
    <string name="setting_welcome_agency">Agency Settings:</string>
    <string name="show_private_key">Show Private Key</string>
    <string name="show_public_key">Show Public Key</string>
    <string name="back">Back</string>
    <string name="setting_welcome_customer">Customer Settings</string>
    <string name="cancel">Cancel</string>
    <string name="search_item_results">Search Item Results</string>
    <string name="search">Search</string>
    <string name="public_key">Public Key:</string>
    <string name="private_key">Private Key:</string>

    <string name="pref_key_site_name">pref_site_name</string>
    <string name="pref_key_site_location">pref_site_location</string>
    <string name="pref_key_site_prikey">pref_site_prikey</string>
    <string name="pref_key_site_pubkey">pref_site_pubkey</string>
    <string name="pref_key_is_agency">pref_key_is_agency</string>


    <string name="site_name">Site Name:</string>
    <string name="site_location">Site Location:</string>
    <string name="logout">Log Out</string>
    <string name="errorSiteLocSiteNameRequired">Site Name / Site Location required</string>
    <string name="auth_other_option">Other authentication options</string>
    <string name="intent_key_search_keyword">searchKeyword</string>
    <string name="list_item">List Items</string>
    <string name="intent_key_item_id">item_id</string>
    <string name="intent_key_item_name">item_name</string>
    <string name="intent_key_show_your_items">intent_key_show_your_items</string>
    <string name="your_items">Your Items</string>
    <string name="item_last_owner">Last Owner</string>
    <string name="asssign_owner">Choose one of the owner to assign the item</string>
    <string name="pref_key_my_item_ids">pref_key_my_item_ids</string>
    <string name="pref_key_md5_hash">pref_key_md5_hash</string>
</resources>
