<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.synle.counterfeit_goods_tracker.DashboardAgency">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_item"
                android:padding="5dp"
                android:onClick="onClickNewItem"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_item"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:onClick="onClickSearchItem"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_item"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:onClick="onClickListItem"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:onClick="onClickSettings"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:onClick="onClickLogOut"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
