<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.synle.counterfeit_goods_tracker.AuthenticationOption">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_auth_option_question" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_auth_option_agent"
            android:layout_marginTop="20dp"
            android:padding="25dp"
            android:onClick="onClickLoginAgency"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_auth_option_customer"
            android:layout_marginTop="30dp"
            android:padding="25dp"
            android:onClick="onClickLoginCustomer"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
